--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.mts",
     ".next\\dev/types/**/*.ts",
     ".next\\dev/types/**/*.ts"
-  ],
+, "src/app/storyblok.tsx"  ],
   "exclude": [
     "node_modules"
   ]
